# InternetRouting

./: .gitignore  CMakeLists.txt  Makefile  README.md  complessita.txt  distance.cpp  distance.h  distance.hpp  iweight.h  main  main.cpp  path  path.cpp  path.h  path.hpp  semiring.h  test  text.txt  weighable.cpp
algorithm/: path.hpp  routing.hpp  semiring.hpp  utilities.cpp  utilities.hpp
cuda/: IR-CUDA.o2195513  IR-CUDA.o2195523  IR-CUDA.o2195531  IR-CUDA.o2195532  Makefile  main  main.c  output.txt  run-main-a100.sh  run-main-p100.sh  set_of_nodes.c  set_of_paths.c  test.c
cuda/src/: main.c  main.cu
cuda/src/algo/: routing.cu  routing.cuh
cuda/src/metrics/: bandwidth.cu  bandwidth.cuh  distance.cu  distance.cuh  lex_product.cu  lex_product.cuh  metric_hyperparams.h  reliability.cu  reliability.cuh  wsp_or_mrsp.cu  wsp_or_mrsp.cuh
cuda/src/reading_data/: node.cu  node.cuh  reading_data.c  reading_data.cu  reading_data.cuh  reading_data.h
cuda/src/utilities/: lp.c  lp.h  node.c  node.h  nset.cu  nset.cuh  path.cu  path.cuh  pset.cu  pset.cuh  utilities.cu  utilities.cuh
metrics/: bandwidth.cpp  bandwidth.hpp  distance.cpp  distance.hpp  reliability.cpp  reliability.hpp
openmp/: Makefile
openmp/src/: main.cpp
report/: TODO.txt  presentazione.ppsx
routing/algo/: routing.hpp
routing/metrics/: bandwidth.hpp  distance.cpp  metrics.hpp
routing/semiring/: semiring.hpp
src/: main.cpp
src/algo/: path.hpp  routing.hpp  settings.h
src/metrics/: bandwidth.cpp  distance.hpp
src/semiring/: lex_product.hpp
src/utilities/: utilities.hpp
(+16 files in other folders)
